--- a/package.json
+++ b/package.json
@@ -1,88 +1,85 @@
 {
   "name": "game-of-life",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "private": true,
   "description": "",
   "main": "./dist/client/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max-old-space-size=4096 webpack-dev-server",
+    "dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max-old-space-size=4096 webpack serve --open",
     "build": "npm i && cross-env NODE_ENV=production webpack",
     "test": "cross-env JEST_JUNIT_OUTPUT_DIR='./coverage' jest --coverage --colors",
     "test:watch": "cross-env JEST_JUNIT_OUTPUT_DIR='./coverage' jest --coverage --colors --colors --watch",
     "lint": "eslint --config ./.eslintrc.js src --ext .ts,.tsx",
     "lint:fix": "eslint --config ./.eslintrc.js src --ext .ts,.tsx --fix --quiet",
     "postinstall": "rm -rf node_modules/@types/react-native",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "prepare": "husky"
   },
   "dependencies": {
-    "immer": "^6.0.3",
-    "lodash-es": "^4.17.15",
-    "memoize-one": "^5.1.1",
-    "polished": "^3.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.9.0",
-    "styled-components": "^5.1.0",
-    "thread-loader": "^2.1.3",
-    "whatwg-fetch": "^3.0.0"
+    "immer": "^10.1.1",
+    "lodash": "^4.17.21",
+    "lodash.isnumber": "^3.0.3",
+    "memoize-one": "^6.0.0",
+    "polished": "^4.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "styled-components": "^6.1.17",
+    "thread-loader": "^4.0.4",
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.26.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "^7.9.1",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.1",
-    "@babel/preset-typescript": "^7.9.0",
-    "@hot-loader/react-dom": "^16.13.0",
-    "@types/html-webpack-plugin": "^3.2.2",
-    "@types/jest": "^25.2.1",
-    "@types/lodash-es": "^4.17.3",
-    "@types/mini-css-extract-plugin": "^0.9.1",
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-redux": "^7.1.7",
-    "@types/redux-logger": "^3.0.7",
-    "@types/styled-components": "^5.0.1",
-    "@types/webpack": "^4.41.10",
-    "@types/webpack-bundle-analyzer": "^2.13.3",
-    "@types/webpack-dev-server": "^3.10.1",
-    "@types/webpack-env": "^1.15.1",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
-    "babel-jest": "^25.3.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-import": "^1.13.0",
-    "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-eslint-plugin": "^2.2.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-react": "^7.19.0",
-    "file-loader": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.3",
-    "gh-pages": "^2.2.0",
-    "handlebars": "^4.7.6",
-    "handlebars-loader": "^1.7.1",
-    "html-webpack-plugin": "^4.2.0",
-    "husky": "^4.2.5",
-    "jest": "^25.3.0",
-    "jest-junit": "^10.0.0",
-    "lint-staged": "^10.1.3",
-    "mini-css-extract-plugin": "^0.9.0",
-    "react-hot-loader": "^4.12.20",
-    "redux-devtools-extension": "^2.13.8",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
+    "@types/html-webpack-plugin": "^3.2.9",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.15.3",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux-logger": "^3.0.13",
+    "@types/styled-components": "^5.1.34",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
+    "@types/webpack-env": "^1.18.8",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-import": "^1.13.8",
+    "core-js": "^3.42.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.25.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-eslint-plugin": "^6.4.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
+    "gh-pages": "^6.3.0",
+    "handlebars": "^4.7.8",
+    "handlebars-loader": "^1.7.3",
+    "html-webpack-plugin": "^5.6.3",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "lint-staged": "^15.5.1",
+    "mini-css-extract-plugin": "^2.9.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "regenerator-runtime": "^0.13.5",
-    "release-it": "^13.5.2",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3",
-    "typescript-styled-plugin": "^0.15.0",
-    "webpack": "^4.42.0",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "regenerator-runtime": "^0.14.1",
+    "release-it": "^19.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "webpack": "^5.99.7",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "repository": {
     "type": "git",
@@ -94,19 +91,9 @@
   "bugs": {
     "url": "https://github.com/vredsun/game-of-life/issues"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm --no-git-tag-version version patch && git add package.json && git add package-lock.json"
-    }
-  },
-  "lint-staged": {
-    "./src/**/*.{ts,tsx}": [
-      "eslint --config ./.eslintrc.js --ext .ts,.tsx --fix --quiet"
-    ]
-  },
   "engines": {
-    "node": ">=12.11.1",
-    "npm": ">=5.5.2"
+    "node": ">=22.15.0",
+    "npm": ">=10.9.2"
   },
   "homepage": "https://github.com/vredsun/game-of-life#readme"
 }
