--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "game-of-life",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "private": true,
   "description": "",
   "main": "./dist/client/index.js",
@@ -9,8 +9,8 @@
     "build": "npm i && cross-env NODE_ENV=production webpack",
     "test": "cross-env JEST_JUNIT_OUTPUT_DIR='./coverage' jest --coverage --colors",
     "test:watch": "cross-env JEST_JUNIT_OUTPUT_DIR='./coverage' jest --coverage --colors --colors --watch",
-    "lint": "eslint --config ./.eslintrc.js src --ext .ts,.tsx",
-    "lint:fix": "eslint --config ./.eslintrc.js src --ext .ts,.tsx --fix --quiet",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix --quiet",
     "postinstall": "rm -rf node_modules/@types/react-native",
     "deploy": "npm run build && gh-pages -d dist",
     "prepare": "husky"
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
+    "@eslint/js": "^9.26.0",
     "@types/html-webpack-plugin": "^3.2.9",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
@@ -76,6 +77,7 @@
     "release-it": "^19.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1",
     "webpack": "^5.99.7",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
