--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "baseUrl": ".",
+    "strictNullChecks": true,
     "paths": {
       "~*": ["./src/*"]
     },
